# Quantara-Event-driven-trading-engine

./: .gitignore  CMakeLists.txt  README.md  config.json
include/: config.h  event.h  kill_switch.h  market.h  order.h  order_book.h  position.h  risk_engine.h  strategy.h  thread_pool.h
src/: config.cpp  main.cpp  market.cpp  order_book.cpp  risk_engine.cpp  strategy.cpp  thread_pool.cpp
